# solana_badger

./: .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SOLANA_SECURITY_DEEP_DIVE.md  package-lock.json  package.json  tsconfig.json
exploits/: 1-signer-checks-exploit.ts  2-owner-checks-exploit.ts  3-arbitrary-cpi-exploit.ts  4-reinitialization-exploit.ts  5-type-cosplay-exploit.ts  6-pda-sharing-exploit.ts  README.md  package.json  run-all-exploits.sh
programs/arbitrary-cpi/: README.md
programs/arbitrary-cpi/secure/anchor/: Anchor.toml  Cargo.toml
programs/arbitrary-cpi/secure/anchor/src/: lib.rs
programs/arbitrary-cpi/secure/anchor/src/instructions/: mod.rs  transfer_tokens.rs  transfer_tokens_with_cpi_helper.rs
programs/arbitrary-cpi/secure/pinocchio/: Cargo.toml
programs/arbitrary-cpi/vulnerable/anchor/: Anchor.toml  Cargo.toml
programs/arbitrary-cpi/vulnerable/anchor/src/: lib.rs  state.rs
programs/arbitrary-cpi/vulnerable/anchor/src/instructions/: initialize.rs  mod.rs  transfer_tokens.rs
programs/arbitrary-cpi/vulnerable/pinocchio/: Cargo.toml
programs/arbitrary-cpi/vulnerable/pinocchio/src/: lib.rs  state.rs
programs/bump-seed-canonicalization/secure/anchor/: Cargo.toml
programs/bump-seed-canonicalization/secure/anchor/src/: lib.rs
programs/bump-seed-canonicalization/secure/anchor/src/instructions/: initialize.rs  withdraw.rs
programs/bump-seed-canonicalization/secure/pinocchio/: Cargo.toml
programs/bump-seed-canonicalization/vulnerable/anchor/: Cargo.toml
programs/bump-seed-canonicalization/vulnerable/anchor/src/: lib.rs  state.rs
programs/bump-seed-canonicalization/vulnerable/anchor/src/instructions/: initialize.rs  withdraw.rs
programs/bump-seed-canonicalization/vulnerable/pinocchio/: Cargo.toml
programs/bump-seed-canonicalization/vulnerable/pinocchio/src/: lib.rs  state.rs
programs/closing-accounts/secure/anchor/: Cargo.toml
programs/closing-accounts/secure/pinocchio/: Cargo.toml
programs/closing-accounts/vulnerable/anchor/: Cargo.toml
programs/closing-accounts/vulnerable/anchor/src/: lib.rs
programs/closing-accounts/vulnerable/anchor/src/instructions/: force_close.rs  initialize.rs  mod.rs
programs/closing-accounts/vulnerable/pinocchio/: Cargo.toml
programs/integer-overflow/secure/anchor/: Cargo.toml
programs/integer-overflow/secure/anchor/src/: lib.rs  state.rs
programs/integer-overflow/secure/anchor/src/instructions/: deposit.rs  withdraw.rs
programs/integer-overflow/secure/pinocchio/: Cargo.toml
programs/integer-overflow/vulnerable/anchor/: Cargo.toml
programs/integer-overflow/vulnerable/pinocchio/: Cargo.toml
programs/owner-checks/: README.md
programs/owner-checks/secure/anchor/: Anchor.toml  Cargo.toml
programs/owner-checks/secure/anchor/src/: lib.rs  state.rs
programs/owner-checks/secure/anchor/src/instructions/: mod.rs  update_data.rs
programs/owner-checks/secure/pinocchio/: Cargo.toml
programs/owner-checks/vulnerable/anchor/: Anchor.toml  Cargo.toml
programs/owner-checks/vulnerable/pinocchio/: Cargo.toml
programs/owner-checks/vulnerable/pinocchio/src/: lib.rs  state.rs
programs/panic-handling/secure/anchor/: Cargo.toml
programs/panic-handling/secure/anchor/src/: lib.rs
programs/panic-handling/secure/anchor/src/instructions/: process.rs
programs/panic-handling/secure/pinocchio/: Cargo.toml
programs/panic-handling/vulnerable/anchor/: Cargo.toml
programs/panic-handling/vulnerable/pinocchio/: Cargo.toml
programs/panic-handling/vulnerable/pinocchio/src/: lib.rs
programs/pda-sharing/: README.md
programs/pda-sharing/secure/anchor/: Anchor.toml  Cargo.toml
programs/pda-sharing/secure/anchor/src/: lib.rs  state.rs
programs/pda-sharing/secure/anchor/src/instructions/: deposit.rs  initialize_pool.rs  mod.rs  withdraw.rs
programs/pda-sharing/secure/pinocchio/: Cargo.toml
programs/pda-sharing/secure/pinocchio/src/: lib.rs  state.rs
programs/pda-sharing/vulnerable/anchor/: Anchor.toml  Cargo.toml
programs/pda-sharing/vulnerable/anchor/src/: lib.rs  state.rs
programs/pda-sharing/vulnerable/anchor/src/instructions/: deposit.rs  initialize_pool.rs  withdraw.rs
programs/pda-sharing/vulnerable/pinocchio/: Cargo.toml
programs/pda-sharing/vulnerable/pinocchio/src/: lib.rs  state.rs
programs/reinitialization-attacks/: README.md
programs/reinitialization-attacks/secure/anchor/: Anchor.toml  Cargo.toml
programs/reinitialization-attacks/secure/pinocchio/: Cargo.toml
programs/reinitialization-attacks/vulnerable/anchor/: Anchor.toml  Cargo.toml
programs/reinitialization-attacks/vulnerable/pinocchio/: Cargo.toml
programs/reinitialization-attacks/vulnerable/pinocchio/src/: lib.rs  state.rs
programs/signer-checks/: README.md
programs/signer-checks/secure/anchor/: Anchor.toml  Cargo.toml
programs/signer-checks/secure/pinocchio/: Cargo.toml
programs/signer-checks/vulnerable/anchor/: Anchor.toml  Cargo.toml
programs/signer-checks/vulnerable/pinocchio/: Cargo.toml
programs/type-cosplay/: README.md
programs/type-cosplay/secure/anchor/: Anchor.toml  Cargo.toml
programs/type-cosplay/secure/pinocchio/: Cargo.toml
programs/type-cosplay/vulnerable/anchor/: 2026-01-29-implement-the-following-plan.txt  Anchor.toml  Cargo.toml
programs/unsafe-rust/vulnerable/pinocchio/: Cargo.toml
programs/unsafe-rust/vulnerable/pinocchio/src/: lib.rs
tests/: arbitrary-cpi.test.ts  bump-seed-canonicalization.test.ts  closing-accounts.test.ts  integer-overflow.test.ts  owner-checks.test.ts  panic-handling.test.ts  pda-sharing.test.ts  reinitialization-attacks.test.ts  signer-checks.test.ts  type-cosplay.test.ts  unsafe-rust.test.ts
tests/pinocchio/: arbitrary-cpi.pinocchio.test.ts  bump-seed-canonicalization.pinocchio.test.ts  closing-accounts.pinocchio.test.ts  integer-overflow.pinocchio.test.ts  owner-checks.pinocchio.test.ts  panic-handling.pinocchio.test.ts  pda-sharing.pinocchio.test.ts  reinitialization.pinocchio.test.ts  signer-checks.pinocchio.test.ts  type-cosplay.pinocchio.test.ts  unsafe-rust.pinocchio.test.ts
(+76 files in other folders)
