[package]
name = "secure-arbitrary-cpi"
version = "0.1.0"
description = "Secure implementation with proper program validation before CPI"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "secure_arbitrary_cpi"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", default-features = false, features = ["token", "token_2022"] }

[dev-dependencies]
solana-program-test = "3.0"
solana-sdk = "3.0"

[profile.release]
overflow-checks = true
