[package]
name = "vulnerable-arbitrary-cpi-pinocchio"
version = "0.1.0"
description = "Pinocchio vulnerable implementation demonstrating arbitrary CPI attacks"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
no-entrypoint = []

[dependencies]
pinocchio = { version = "0.10.1", features = ["cpi"] }
pinocchio-token = "0.5.0"
solana-program-error = "3.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace]
