[package]
name = "secure-integer-overflow"
version = "0.1.0"
description = "Secure implementation preventing integer overflow attacks"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "secure_integer_overflow"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"

[dev-dependencies]
solana-program-test = "3.0"
solana-sdk = "3.0"

[profile.release]
overflow-checks = true
