[package]
name = "vulnerable-owner-checks-pinocchio"
version = "0.1.0"
description = "Pinocchio vulnerable implementation demonstrating missing owner checks"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
no-entrypoint = []

[dependencies]
pinocchio = "0.7.0"
pinocchio_log = "0.7.0"

[dev-dependencies]
solana-program-test = "1.18.0"
solana-sdk = "1.18.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
