[package]
name = "secure-panic-handling"
version = "0.1.0"
description = "Secure implementation with proper error handling"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "secure_panic_handling"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"

[dev-dependencies]
solana-program-test = "3.0"
solana-sdk = "3.0"

[profile.release]
overflow-checks = true
