[package]
name = "vulnerable-panic-handling-pinocchio"
version = "0.1.0"
description = "Pinocchio vulnerable implementation demonstrating panic handling issues"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
no-entrypoint = []

[dependencies]
pinocchio = "0.10.1"
solana-program-error = "3.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace]
