[package]
name = "secure-pda-sharing-pinocchio"
version = "0.1.0"
description = "Pinocchio secure implementation preventing PDA sharing attacks"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
no-entrypoint = []

[dependencies]
pinocchio = { version = "0.10.1", features = ["cpi"] }
pinocchio-token = "0.5.0"
solana-program-error = "3.0"
solana-program = "2.2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace]
